--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ pkg_search_module(GLFW REQUIRED glfw3)
 include_directories(${GLFW_INCLUDE_DIRS})
 
 #cgal
-find_package( CGAL QUIET COMPONENTS  )
+find_package(CGAL QUIET COMPONENTS )
 if ( NOT CGAL_FOUND )
     message(STATUS "This project requires the CGAL library, and will not be compiled.")
     return()
@@ -23,7 +23,10 @@ endif()
 
 # flags
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wformat")
-set(CMAKE_BUILD_TYPE "Debug")
+#set(CMAKE_BUILD_TYPE "Debug")
+
+# shapelib
+add_subdirectory(dep/shapelib-1.3.0)
 
 # source files
 file(GLOB src "src/*.h" "src/*.cpp")
@@ -31,16 +34,17 @@ file(GLOB imgui "dep/imgui/*.h" "dep/imgui/*.cpp")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 
 # includes
-include_directories(src dep/imgui)
+include_directories(src dep/imgui dep/shapelib-1.3.0)
 
 # shape_mesher
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 add_executable(shape_mesher ${src} ${imgui})
 target_link_libraries(
         shape_mesher
         ${GLFW_LIBRARIES}
         ${CGAL_LIBRARIES}
         ${CGAL_3RD_PARTY_LIBRARIES}
-        GL)
+        GL shapelib)
 
 #add_executable( test_cgal  test_cgal.cpp )
 #add_to_cached_list( CGAL_EXECUTABLE_TARGETS test_cgal )
