--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -1,5 +1,5 @@
 [Debug]
-Pos=5,35
+Pos=37,30
 Size=400,400
 Collapsed=0
 
@@ -19,7 +19,27 @@ Size=316,281
 Collapsed=0
 
 [GL Info]
-Pos=597,24
+Pos=492,53
 Size=661,407
-Collapsed=1
+Collapsed=0
+
+[Same title as another window##1]
+Pos=319,174
+Size=539,195
+Collapsed=0
+
+[Same title as another window##2]
+Pos=353,304
+Size=449,61
+Collapsed=0
+
+[###AnimatedTitle]
+Pos=100,300
+Size=246,48
+Collapsed=0
+
+[Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
 
